<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evoluzzion</string>
    <string name="button_enter">Enter</string>
    <string name="button_add_jigsaw">Add Jigsaw Puzzle</string>
    <string name="button_add_step">Add Step</string>
    <string name="button_launch_camera">Launch Camera</string>
    <string name="button_step_share">Share</string>
    <string name="logo_content_description">Evoluzzion</string>
    
    <string name="jigsaws">Jigsaws</string>
    <string name="jigsawslist_title">Jigsaw Puzzles</string>
    <string name="jigsaws_title">Jigsaw Title</string>
    <string name="jigsaw_add_title">Add Jigsaw Puzzle</string>
    <string name="jigsaw_add_name">Name</string>
    <string name="jigsaw_add_pieces">Pieces</string>
    <string name="jigsaw_add_barcode">Barcode</string>
    <string name="step_add_title">Add Step</string>
    <string name="step_add_name">Name</string>
    <string name="step_add_comment">Comment</string>
    <string name="jigsaw_image">Jigsaw Image</string>
    
    <string name="jigsaw_saved">Jigsaw saved</string>
    <string name="jigsaw_not_saved">Jigsaw could\'t be saved</string>
    <string name="jigsaw_delete">Delete Jigsaw</string>
    
    <string name="steps">Steps</string>
    <string name="step">Step</string>
    <string name="step_take_a_photo">Please, take a photo!</string>
    <string name="step_save">Step saved</string>
    <string name="step_not_saved">Step could\'t be saved</string>
    <string name="step_delete">Delete Step</string>
    
    <string name="divider">Divider</string>
    <string name="shadow_divider">Shadow Divider</string>
    
    <string name="camera_image">Camera Image</string>
    
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>