<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background"
    android:gravity="center" >
    
    <Button 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_launch_camera"
	    android:onClick="launchCamera"
	    android:background="@drawable/button_pink"
	    android:textColor="#CCCCCC"
	    android:textSize="20sp"
	    android:padding="10dip"/>
	<EditText 
	    android:id="@+id/step_add_name"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/step_add_name"/>
	<EditText 
	    android:id="@+id/step_add_comment"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/step_add_comment"/>
	<Button 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_add_step"
	    android:onClick="addStep"
	    android:background="@drawable/button_pink"
	    android:textColor="#CCCCCC"
	    android:textSize="20sp"
	    android:padding="10dip"/>
	<ImageView 
	    android:id="@+id/jigsaw_image"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/jigsaw_image"/>
	
</LinearLayout>