<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/list_background"
    android:gravity="center" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/list_background">
		<ImageView 
		    android:layout_gravity="left"
		    android:layout_width="100dip"
		    android:layout_height="50dip"
		    android:layout_marginLeft="10dip"
		    android:src="@drawable/evoluzzion_logo_800"
		    android:contentDescription="@string/jigsawslist_title"
		    />
		<Button
		    android:id="@+id/jigsaw_delete"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/delete"
		    android:layout_alignParentRight="true"
		    android:layout_margin="10dip"
		    android:textColor="@color/black"
		    android:onClick="deleteJigsaw" />
		<Button
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/edit"
		    android:layout_toLeftOf="@id/jigsaw_delete"
		    android:layout_margin="10dip"
		    android:textColor="@color/black"
		    android:onClick="editJigsaw" />
	</RelativeLayout>
	<Button 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/button_add_step"
	    android:onClick="addStep"
	    android:background="@drawable/button_background"
	    android:textColor="@color/button_font_color"
	    android:textSize="20sp"
	    android:layout_marginLeft="15dip"
	    android:layout_marginRight="15dip"
	    android:paddingBottom="10dip"
	    android:paddingTop="10dip"/>
	<TextView 
	    android:gravity="center"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true"
	    android:textColor="@color/main_color_1"
	    android:layout_marginBottom="4dip"
	    android:text="@string/steps"
	    />
	<TextView 
	    android:gravity="center"
	    android:layout_width="80dip"
	    android:layout_height="3dip"
	    android:singleLine="true"
	    android:background="@color/main_color_1"
	    android:text="@string/jigsaws"
	    />
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="@color/main_color_1"
	    android:layout_marginBottom="4dip"
	    />
	
	<ListView 
	    android:id="@+id/jigsaw_steps_list"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:cacheColorHint="@color/transparent"
	    android:divider="@color/transparent"
	    ></ListView>
</LinearLayout>